k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth
  labels:
    name:  auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app:  auth
    spec:
      containers:
      - image:  auth:latest
        imagePullPolicy: IfNotPresent
        name:  auth
        resources:
          limits:
            cpu: "500m"
            memory: "512M"
          requests:
            cpu: "250m"
            memory: "512M"
        livenessProbe:
          httpGet:
            path: /auth/heath
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /auth/heath
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 20
      restartPolicy: Always
