k8s/heal-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  heal
  labels:
    name:  heal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heal
  template:
    metadata:
      labels:
        app:  heal
    spec:
      serviceAccountName: resource-manager
      containers:
      - image:  heal:latest
        imagePullPolicy: IfNotPresent
        name:  heal
        resources:
          limits:
            cpu: "250m"
            memory: "512M"
          requests:
            cpu: "250m"
            memory: "256M"
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: docker-sock
        livenessProbe:
          httpGet:
            path: /api/k8s/heath
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/k8s/heath
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 20
      volumes:
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
      restartPolicy: Always
