k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "8000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "8000"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "8000"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
  name: deployforge-ingress
  labels:
    app.kubernetes.io/name: deployforge-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "*.preview.localhost"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: router-service
                port:
                  number: 80
    - host: "*.agent.localhost"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: router-service
                port:
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: /api/k8s
            backend:
              service:
                name: heal-service
                port: 
                  number: 80
          - pathType: Prefix
            path: /api/github
            backend:
              service:
                name: heal-service
                port: 
                  number: 80
          - pathType: Prefix
            path: /api/auth
            backend:
              service:
                name: auth-service
                port: 
                  number: 80
